; ModuleID = '/home/carl/AnghaBench/curl/docs/examples/extr_http2-serverpush.c_setup.c'
source_filename = "/home/carl/AnghaBench/curl/docs/examples/extr_http2-serverpush.c_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OUTPUTFILE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"wb\00", align 1
@CURLOPT_WRITEDATA = common dso_local global i32 0, align 4
@CURLOPT_URL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [34 x i8] c"https://localhost:8443/index.html\00", align 1
@CURLOPT_VERBOSE = common dso_local global i32 0, align 4
@CURLOPT_DEBUGFUNCTION = common dso_local global i32 0, align 4
@my_trace = common dso_local global i64 0, align 8
@CURLOPT_HTTP_VERSION = common dso_local global i32 0, align 4
@CURL_HTTP_VERSION_2_0 = common dso_local global i64 0, align 8
@CURLOPT_SSL_VERIFYPEER = common dso_local global i32 0, align 4
@CURLOPT_SSL_VERIFYHOST = common dso_local global i32 0, align 4
@CURLOPT_PIPEWAIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @setup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @setup(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32, i32* @OUTPUTFILE, align 4
  %6 = call i32* @fopen(i32 %5, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i32* %6, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %35

10:                                               ; preds = %1
  %11 = load i32*, i32** %3, align 8
  %12 = load i32, i32* @CURLOPT_WRITEDATA, align 4
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 (i32*, i32, ...) @curl_easy_setopt(i32* %11, i32 %12, i32* %13)
  %15 = load i32*, i32** %3, align 8
  %16 = load i32, i32* @CURLOPT_URL, align 4
  %17 = call i32 (i32*, i32, ...) @curl_easy_setopt(i32* %15, i32 %16, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.1, i64 0, i64 0))
  %18 = load i32*, i32** %3, align 8
  %19 = load i32, i32* @CURLOPT_VERBOSE, align 4
  %20 = call i32 (i32*, i32, ...) @curl_easy_setopt(i32* %18, i32 %19, i64 1)
  %21 = load i32*, i32** %3, align 8
  %22 = load i32, i32* @CURLOPT_DEBUGFUNCTION, align 4
  %23 = load i64, i64* @my_trace, align 8
  %24 = call i32 (i32*, i32, ...) @curl_easy_setopt(i32* %21, i32 %22, i64 %23)
  %25 = load i32*, i32** %3, align 8
  %26 = load i32, i32* @CURLOPT_HTTP_VERSION, align 4
  %27 = load i64, i64* @CURL_HTTP_VERSION_2_0, align 8
  %28 = call i32 (i32*, i32, ...) @curl_easy_setopt(i32* %25, i32 %26, i64 %27)
  %29 = load i32*, i32** %3, align 8
  %30 = load i32, i32* @CURLOPT_SSL_VERIFYPEER, align 4
  %31 = call i32 (i32*, i32, ...) @curl_easy_setopt(i32* %29, i32 %30, i64 0)
  %32 = load i32*, i32** %3, align 8
  %33 = load i32, i32* @CURLOPT_SSL_VERIFYHOST, align 4
  %34 = call i32 (i32*, i32, ...) @curl_easy_setopt(i32* %32, i32 %33, i64 0)
  store i32 0, i32* %2, align 4
  br label %35

35:                                               ; preds = %10, %9
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local i32* @fopen(i32, i8*) #1

declare dso_local i32 @curl_easy_setopt(i32*, i32, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
